# NCEPLIBS-bufr

src/: bufr.interface.f90  bufr.interface.h  list_of_files.cmake  table_d_info.f90
utils/: CMakeLists.txt  debufr.c  debufr.f
